Closed
Bug 234895
Opened 22 years ago
Closed 22 years ago
documentation / comment incorrect
Categories
(SeaMonkey :: General, defect)
SeaMonkey
General
Tracking
(Not tracked)
RESOLVED
FIXED
People
(Reporter: mozbugs, Assigned: mozbugs)
References
()
Details
Attachments
(1 file)
|
506 bytes,
patch
|
Biesinger
:
review+
bzbarsky
:
superreview+
|
Details | Diff | Splinter Review |
User-Agent:
Build Identifier: latest
353 /* void saveURI (in nsIURI aURI, in nsIURI aReferrer,
354 in nsIInputStream aPostData, in wstring aExtraHeaders,
355 in nsISupports aFile); */
356 NS_IMETHODIMP nsWebBrowserPersist::SaveURI(
357 nsIURI *aURI, nsISupports *aCacheKey, nsIURI *aReferrer, nsIInputStream
*aPostData, const char *aExtraHeaders, nsISupports *aFile)
358 {
will attach patch asap
Reproducible: Always
Steps to Reproduce:
1. documentation missmatches method sig
Actual Results:
-
Expected Results:
-
| Assignee | ||
Comment 1•22 years ago
|
||
Updated•22 years ago
|
Attachment #141748 -
Flags: review+
Comment 2•22 years ago
|
||
Comment on attachment 141748 [details] [diff] [review]
patch
sr=bzbarsky. Simon, you want to request reviews (typically from whoever has
made changes or reviewed changes to the file)....
Attachment #141748 -
Flags: superreview+
Updated•22 years ago
|
Assignee: general → mozbugs
Status: UNCONFIRMED → NEW
Ever confirmed: true
Comment 3•22 years ago
|
||
And checked in for 1.7b. Thank you for the patch, Simon!
Status: NEW → RESOLVED
Closed: 22 years ago
Resolution: --- → FIXED
Updated•21 years ago
|
Product: Browser → Seamonkey
You need to log in
before you can comment on or make changes to this bug.
Description
•