Fix comment.  Bug 234895, patch by Simon Miller <mozbugs@nuvisions.ch>, r=biesi, sr=bzbarsky